Fix charts in dark mode

--- a/axelor-front/src/views/chart/widgets/bar/bar-group.module.scss
+++ b/axelor-front/src/views/chart/widgets/bar/bar-group.module.scss
@@ -1,5 +1,3 @@
-$radioColor: #212121;
-
 .radio-button {
   cursor: pointer;
 }
@@ -7,11 +5,11 @@ $radioColor: #212121;
 .radio {
   height: 0.8rem;
   width: 0.8rem;
-  border: 2px solid $radioColor;
+  border: 2px solid var(--bs-body-color);
   margin-top: 1px;
 
   &-active {
-    background-color: mix(white, $radioColor, 20%);
+    background-color: var(--bs-body-color);
   }
 }
 
